src/test/ui/consts/miri_unleashed/mutable_references.stderr
error[E0594]: cannot assign to `*OH_YES`, as `OH_YES` is an immutable static item
  --> $DIR/mutable_references.rs:32:5
   |
LL |     *OH_YES = 99;
   |     ^^^^^^^^^^^^ cannot assign

error: aborting due to previous error

